--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
-<head>
+  <head>
     <!--META DATA TAGS-->
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,100 +11,153 @@
     <!--STYLESHEETS-->
     <link rel="stylesheet" href="index.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Playfair+Display:ital@1&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-</head>
-
-<!--MAIN CONTENT-->
-<div class="hero-image">
-    <div class="hero-text">
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Playfair+Display:ital@1&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body onload="">
+    <!--MAIN CONTENT-->
+    <div class="hero-image">
+      <div class="hero-text"></div>
     </div>
-</div>
-<h1 class="title">Statistics around food safety</h1>
-<div class="graphArea">
-    <p class="introText">What do I want my audience to do?
-        Become more mindful of the risks that human errors plays into food safety.
-        Who is the intended audience? Anybody who buys/ eats food
-        What is the goal the creator has for the audience? The share statistics around food safety
-        Why is this genre choice effective? Because almost everyone has access to the internet (if this was a website
-        that was going Live I would use lead advertisement to target ads to my website to a more direct audience)
-        Rhetorical Strategy used?
-    </p>
-    <img class="graph" src="16735.jpeg" alt="Statistics Graph" />
-    <p class="graphText"> Eget nunc scelerisque viverra mauris in aliquam sem fringilla. Bibendum est ultricies integer
-        quis auctor elit sed. Donec et odio pellentesque diam volutpat. Tellus id interdum velit laoreet id donec. Risus
-        feugiat in ante metus. Elementum integer enim neque volutpat ac. Mauris cursus mattis molestie a iaculis at.
-        Aliquet sagittis id consectetur purus ut faucibus pulvinar elementum. Nec ullamcorper sit amet risus nullam
-        eget. A pellentesque sit amet porttitor eget dolor.</p>
+    <h1 class="title">Title of article here</h1>
+    <div class="graphArea">
+      <p class="introText">
+        What do I want my audience to do? Become more mindful of the risks that
+        human errors plays into food safety. Who is the intended audience?
+        Anybody who buys/ eats food What is the goal the creator has for the
+        audience? The share statistics around food safety Why is this genre
+        choice effective? Because almost everyone has access to the internet (if
+        this was a website that was going Live I would use lead advertisement to
+        target ads to my website to a more direct audience) Rhetorical Strategy
+        used?
+      </p>
+      <img class="graph" src="16735.jpeg" alt="Statistics Graph" />
+      <p class="graphText">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Est placerat in
+        egestas erat imperdiet sed euismod nisi porta. Pretium viverra
+        suspendisse potenti nullam ac tortor vitae. Id porta nibh venenatis cras
+        sed felis. Enim tortor at auctor urna nunc id cursus metus. Enim blandit
+        volutpat maecenas volutpat blandit aliquam. Amet justo donec enim diam.
+        Lacus sed viverra tellus in. At volutpat diam ut venenatis tellus in
+        metus vulputate. Fermentum iaculis eu non diam phasellus vestibulum
+        lorem sed risus. Nec dui nunc mattis enim ut tellus elementum sagittis
+        vitae. Tellus rutrum tellus pellentesque eu tincidunt. Venenatis a
+        condimentum vitae sapien. Netus et malesuada fames ac. Rutrum quisque
+        non tellus orci ac auctor augue mauris augue. Integer vitae justo eget
+        magna fermentum iaculis eu. Euismod in pellentesque massa placerat duis
+        ultricies. Tellus mauris a diam maecenas sed enim ut.
+      </p>
 
-    <p class="graphText">
-        Cras semper auctor neque vitae tempus quam pellentesque nec nam. Tempus imperdiet nulla malesuada pellentesque
-        elit eget gravida. Consequat interdum varius sit amet mattis vulputate enim nulla. Dui sapien eget mi proin sed.
-        Enim blandit volutpat maecenas volutpat blandit aliquam etiam. Neque volutpat ac tincidunt vitae. Faucibus
-        ornare suspendisse sed nisi. Lorem ipsum dolor sit amet consectetur adipiscing elit ut. Suscipit adipiscing
-        bibendum est ultricies integer quis auctor. Orci porta non pulvinar neque laoreet. Dignissim suspendisse in est
-        ante in nibh mauris. Nascetur ridiculus mus mauris vitae. Morbi blandit cursus risus at ultrices mi tempus.</p>
-</div>
+      <p class="graphText">
+        Cras semper auctor neque vitae tempus quam pellentesque nec nam. Tempus
+        imperdiet nulla malesuada pellentesque elit eget gravida. Consequat
+        interdum varius sit amet mattis vulputate enim nulla. Dui sapien eget mi
+        proin sed. Enim blandit volutpat maecenas volutpat blandit aliquam
+        etiam. Neque volutpat ac tincidunt vitae. Faucibus ornare suspendisse
+        sed nisi. Lorem ipsum dolor sit amet consectetur adipiscing elit ut.
+        Suscipit adipiscing bibendum est ultricies integer quis auctor. Orci
+        porta non pulvinar neque laoreet. Dignissim suspendisse in est ante in
+        nibh mauris. Nascetur ridiculus mus mauris vitae. Morbi blandit cursus
+        risus at ultrices mi tempus.
+      </p>
+    </div>
 
-<div class="graphArea2">
-    <img class="graph2" src="16735.jpeg" alt="Statistics Graph" />
-    <p class="graphText2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-        labore et dolore magna aliqua. Est placerat in egestas erat imperdiet sed euismod nisi porta. Pretium viverra
-        suspendisse potenti nullam ac tortor vitae. Id porta nibh venenatis cras sed felis. Enim tortor at auctor urna
-        nunc id cursus metus. Enim blandit volutpat maecenas volutpat blandit aliquam. Amet justo donec enim diam. Lacus
-        sed viverra tellus in. At volutpat diam ut venenatis tellus in metus vulputate. Fermentum iaculis eu non diam
-        phasellus vestibulum lorem sed risus. Nec dui nunc mattis enim ut tellus elementum sagittis vitae. Tellus rutrum
-        tellus pellentesque eu tincidunt. Venenatis a condimentum vitae sapien. Netus et malesuada fames ac. Rutrum
-        quisque non tellus orci ac auctor augue mauris augue. Integer vitae justo eget magna fermentum iaculis eu.
-        Euismod in pellentesque massa placerat duis ultricies. Tellus mauris a diam maecenas sed enim ut. </p>
-    <p class="graphText2">
-        Ultricies lacus sed turpis tincidunt id aliquet risus feugiat. Nisi est sit amet facilisis magna. Fames ac
-        turpis egestas maecenas pharetra convallis posuere morbi. Condimentum mattis pellentesque id nibh. Nibh nisl
-        condimentum id venenatis a condimentum vitae. Scelerisque viverra mauris in aliquam. Condimentum vitae sapien
-        pellentesque habitant morbi tristique senectus. Lorem sed risus ultricies tristique nulla aliquet. Hendrerit
-        gravida rutrum quisque non. Mauris ultrices eros in cursus turpis. Hendrerit gravida rutrum quisque non tellus
-        orci. Enim neque volutpat ac tincidunt vitae semper. Mauris ultrices eros in cursus turpis massa. Dignissim enim
-        sit amet venenatis urna cursus eget nunc scelerisque. Nunc sed blandit libero volutpat. Adipiscing vitae proin
-        sagittis nisl. In nulla posuere sollicitudin aliquam ultrices sagittis orci a.
-
-    </p>
-</div>
-<!--FOOTER-->
-<div class="footer">
-    <div class="social-media">
+    <div class="graphArea2">
+      <img class="graph2" src="16735.jpeg" alt="Statistics Graph" />
+      <p class="graphText2">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Est placerat in
+        egestas erat imperdiet sed euismod nisi porta. Pretium viverra
+        suspendisse potenti nullam ac tortor vitae. Id porta nibh venenatis cras
+        sed felis. Enim tortor at auctor urna nunc id cursus metus. Enim blandit
+        volutpat maecenas volutpat blandit aliquam. Amet justo donec enim diam.
+        Lacus sed viverra tellus in. At volutpat diam ut venenatis tellus in
+        metus vulputate. Fermentum iaculis eu non diam phasellus vestibulum
+        lorem sed risus. Nec dui nunc mattis enim ut tellus elementum sagittis
+        vitae. Tellus rutrum tellus pellentesque eu tincidunt. Venenatis a
+        condimentum vitae sapien. Netus et malesuada fames ac. Rutrum quisque
+        non tellus orci ac auctor augue mauris augue. Integer vitae justo eget
+        magna fermentum iaculis eu. Euismod in pellentesque massa placerat duis
+        ultricies. Tellus mauris a diam maecenas sed enim ut.
+      </p>
+      <p class="graphText2">
+        Ultricies lacus sed turpis tincidunt id aliquet risus feugiat. Nisi est
+        sit amet facilisis magna. Fames ac turpis egestas maecenas pharetra
+        convallis posuere morbi. Condimentum mattis pellentesque id nibh. Nibh
+        nisl condimentum id venenatis a condimentum vitae. Scelerisque viverra
+        mauris in aliquam. Condimentum vitae sapien pellentesque habitant morbi
+        tristique senectus. Lorem sed risus ultricies tristique nulla aliquet.
+        Hendrerit gravida rutrum quisque non. Mauris ultrices eros in cursus
+        turpis. Hendrerit gravida rutrum quisque non tellus orci. Enim neque
+        volutpat ac tincidunt vitae semper. Mauris ultrices eros in cursus
+        turpis massa. Dignissim enim sit amet venenatis urna cursus eget nunc
+        scelerisque. Nunc sed blandit libero volutpat. Adipiscing vitae proin
+        sagittis nisl. In nulla posuere sollicitudin aliquam ultrices sagittis
+        orci a.
+      </p>
+    </div>
+    <!--FOOTER-->
+    <div class="footer">
+      <div class="social-media">
         <p class="outro">
-            Thank you for stopping by my project! If you liked this project,
-            check out my portfolio page and social media links below!
+          Thank you for stopping by my project! If you liked this project, check
+          out my portfolio page and social media links below!
         </p>
-        <a class="port" href="https://kimbrow-slice.github.io/JeffKimbrow/"><i class="fas fa-code"></i></a>
-        <a class="linkedin" href="https://www.linkedin.com/in/jeffery-kimbrow/"><i class="fab fa-linkedin-in"></i></a>
-        <a class="github" href="https://github.com/kimbrow-slice/"><i class="fab fa-github-alt"></i></a>
-    </div>
-    <div class="copyright">
+        <a class="port" href="https://kimbrow-slice.github.io/JeffKimbrow/"
+          ><i class="fas fa-code"></i
+        ></a>
+        <a class="linkedin" href="https://www.linkedin.com/in/jeffery-kimbrow/"
+          ><i class="fab fa-linkedin-in"></i
+        ></a>
+        <a class="github" href="https://github.com/kimbrow-slice/"
+          ><i class="fab fa-github-alt"></i
+        ></a>
+      </div>
+      <div class="copyright">
         <p class="copyright">COPYRIGHT 2021 KIMBROWCONSULTING</p>
+      </div>
     </div>
-</div>
 
-<!--SCRIPTS-->
-<script src="https://kit.fontawesome.com/fc5d2b5d29.js" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
-</body>
-
+    <!--SCRIPTS-->
+    <script
+      src="https://kit.fontawesome.com/fc5d2b5d29.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
