--- a/index.html
+++ b/index.html
@@ -28,95 +28,99 @@
       rel="stylesheet"
     />
     <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
+    rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    crossorigin="anonymous"
+  />
   </head>
   <body onload="">
     <!--MAIN CONTENT-->
     <div class="hero-image">
       <div class="hero-text"></div>
     </div>
-    <h1 class="title">Title of article here</h1>
+    <h1 class="title">Why is it important to have proper food handling?</h1>
+    <div class="contianer">
     <div class="graphArea">
-      <p class="introText">
-        What do I want my audience to do? Become more mindful of the risks that
-        human errors plays into food safety. Who is the intended audience?
-        Anybody who buys/ eats food What is the goal the creator has for the
-        audience? The share statistics around food safety Why is this genre
-        choice effective? Because almost everyone has access to the internet (if
-        this was a website that was going Live I would use lead advertisement to
-        target ads to my website to a more direct audience) Rhetorical Strategy
-        used?
-      </p>
-      <img class="graph" src="16735.jpeg" alt="Statistics Graph" />
+      <h2 class="introText">
+         Unsafe food has been a problem in society since history was first recorded. Food-borne diseases are not only problems in developing countries but also in developed countries such as our own. Although every day people around the world get sick from food they eat; most food-borne diseases can be prevented with proper food handling. In this article we will cover the five keys when handling food. Following these steps helps prevent microorganisms from making your customers or yourself sick. 
+         </h2>
+      <img class="graph" src="/0820383cf6153008a6c20dfbd6e0e5b6.png" alt="Statistics Graph"/>  
+      <section id="stepsBlock">
       <p class="graphText">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Est placerat in
-        egestas erat imperdiet sed euismod nisi porta. Pretium viverra
-        suspendisse potenti nullam ac tortor vitae. Id porta nibh venenatis cras
-        sed felis. Enim tortor at auctor urna nunc id cursus metus. Enim blandit
-        volutpat maecenas volutpat blandit aliquam. Amet justo donec enim diam.
-        Lacus sed viverra tellus in. At volutpat diam ut venenatis tellus in
-        metus vulputate. Fermentum iaculis eu non diam phasellus vestibulum
-        lorem sed risus. Nec dui nunc mattis enim ut tellus elementum sagittis
-        vitae. Tellus rutrum tellus pellentesque eu tincidunt. Venenatis a
-        condimentum vitae sapien. Netus et malesuada fames ac. Rutrum quisque
-        non tellus orci ac auctor augue mauris augue. Integer vitae justo eget
-        magna fermentum iaculis eu. Euismod in pellentesque massa placerat duis
-        ultricies. Tellus mauris a diam maecenas sed enim ut.
+        
+        <ul> <p class="graphText"><b>The First Step is <strong id="stepWords">Keeping Clean</strong></p></b>
+          <p class="why">While most microorganisms do not cause disease, dangerous microorganisms are widely found in soil, water, animals and people. These microorganisms are carried on hands, wiping cloths and utensills, especially cutting boards and the slightest contact can transfer them to food and cause food-borne diseases.</p>
+          <li><b>Wash your hands before handling / during the preparation of food</b></li>
+          <p class="description">Proper personal hygiene is important in food safety to lower the risks of germs being transfered. Wearing clean gloves and changing them often also helps with removing grease and bacteria.</p>
+          <li><b>Wash your hands after using the bathroom</li></b>
+          <p class="description">Doing this prevents risks of faecal material being transfered to food</P>
+          <li><b>Wash and sanitize all surfaces and equipment used when preparing food</b></li>
+           <p class="description">Cleaning surfaces and equipment help prevent the chance of microorganisms from having the chance of beginning to grow.</p>
+          <li><b>Protect kitchen areas and food from insects, pests, and animals</b></li>
+          <p class="description">Pests can transfer harmful microorganisms onto food and kitchen surfaces.</p>
+        </ul>
       </p>
+    </section>
+      <ul> <p class="graphText" style><b>The Second Step is <strong id="stepWords">Separate Raw</strong> and <strong id="stepWords">Cooked Food</strong></b></p>
+        <p class="why">Raw food, especially meat, poultry and seafood, and their juices, can contain dangerous microorganisms which may be transferred onto other foods during food preparation and storage.</p>
+        <li><b>Separate raw meat, poultry and seafood from other foods</b></li>
+        <p class="description">Keeping raw and prepared food separate prevents the transfer of microorganisms.</p>
+        <li><b>Use separate equipment and utensils such as knives and cutting boards for handling raw foods</li></b>
+        <p class="description">"Cross-contamination" is a term used to describe the transfer  of microorganisms from raw to cooked food.</P>
+        <li><b>Store food in containers to avoid contact between raw and prepared foods</b></li>
+         <p class="description">Storing food in containers with lids to avoid contact between raw and prepared food.</p>
+      </ul>
+    </p>
+    <section id="stepsBlock">
+    <ul> <p class="graphText" style><b>The Third Step is <strong id="stepWords">Cook Thoroughly</strong></b></p>
+      <p class="why">Proper cooking kills almost all dangerous microorganisms. Studies have shown that cooking food to a temperature of 70 degree celcius can help ensure it is safe for consumption. Foods that require special attention include minced meats, rolled roasts, large joints of meat and whole poultry.</p>
+      <li><b>Cook food thoroughly, especially meat, poultry, eggs and seafood</b></li>
+      <p class="description">Food must reach a temperature of 70 degrees celcius in order to ensure it is safe to eat. A temperature of 70 degrees celcius kills even high concentrations of microorganisms within 30 seconds.</p>
+      <li><b>Bring foods like soups and stews to boiling to make sure that they have reached 70 degrees celcius. For meat and poultry, make sure that juices are clear, not pink. Ideally, use a themometer.</li></b>
+      <p class="description">If no access to a themometer, we emphasize the use of color as an indicator that the food is cooked thoroughly. </P>
+      <li><b>Reheat cooked food thoroughly</b></li>
+       <p class="description">Microwave ovens can cook unevenly and leave cold spots where dangerous bacteria can survive. Make sure that food cooked in a microwave oven is at a safe temperature throughout.</p>
+    </ul>
+  </p>
+  </section>
+  <ul> <p class="graphText" style><b>The Forth Step is <strong id="stepWords">Keeping Food</strong> at <strong id="stepWords">Safe Temperatures</strong></b></p>
+    <p class="why">Microorganisms can multiply very quickly if food is stored at room temperature. By holding at temperatures below 5 degree celcius or above 60 degrees celcius, the growth of microorganisms is slowed down or stopped. Some dangerous microorganisms still grow below 5 degrees celcius.</p>
+    <li><b>Do not leave cooked food at room temperature for more than 2 hours</b></li>
+    <p class="description">refrigeration slows bacterial growth. However, even when food is stored in the refigerator or freezer, microorganisms can grow.</p>
+    <li><b>Refrigerate promptly all cooked and perishable food (preferably below 5 degrees celcius)</li></b>
+    <p class="description">Preparing smaller portions of food can help reduce the amount of leftovers that may become waste. Label leftovers to indicate how long they have been stored.</P>
+    <li><b>Keep cooked food piping hot (more than 60 degrees celcius) prior to serving</b></li>
+     <p class="description">The danger zone is the temperature range of 5 degrees celcius to 60 degrees celcius in which microorganisms multiply very fast.</p>
+    <li><b>Do not store food too long even in the refrigerator</b></li>
+    <p class="description">Leftover food should not be stored in the refrigerator for longer than 3 days and should not be reheated more than once.</p>
+    <li><b>Do not thaw frozen food at room temperature</b></li>
+    <p class="description">Microwave ovens can be used to thaw food, but can leave warm spots where microorganisms can grow. Food thawed in the microwave oven should be cooked promptly.</p>
+  </ul>
+</p>
+<section id="stepsBlock">
+<ul> <p class="graphText" style><b>The Fifth Step is <strong id="stepWords">Use Safe Water</strong> and <strong id="stepWords">Raw Materials</strong></b></p>
+  <p class="why">Raw materials, including water and ice, may be contaminated with dangerous microorganisms and chemicals. Toxic chemicals may be formed in damaged and moldy foods. Care in selection of raw materials and simple measures such as washing and peeling may reduce the risk.</p>
+  <li><b>Use safe water or treat it to make it safe</b></li>
+  <p class="description">Untreated water from rivers and canals contain parasites and pathogens which can cause diarrhoea, typhoid or dysentery. Untreated water from rivers and canals is not safe!</p>
+  <li><b>Select fresh and wholesome foods</li></b>
+  <p class="description">Avoid food that is damaged or rotting. Cut away damaged or bruised areas of fruits or vegetables - bacteria can thrive in these places.</P>
+  <li><b>Choose foods processed for safety, such as pasteurized milk</b></li>
+   <p class="description">"Safe" means that water and food is free from dangerous microorganisms and toxic chemicals at levels that could cause illness and/or disease.</p>
+  <li><b>Wash fruits and vegetables, especially if eaten raw</b></li>
+  <p class="description">Fresh fruit and vegetables have been identified as a significant source of pathogens and chemical contaminants. Therefore it is critical to wash all fruits and vegetables with clean and safe water before eating.</p>
+  <li><b>Do not use food beyond its expiry date</b></li>
+  <p class="description">Pay attention to the expiry date on food items and throw away food whne the date has passed.</p>
+</ul>
+</p>
+</section> <section class="conculsion">
+    <p>Proper food handling can help mitigate the risk of the transfer of dangerous microorganisms or pathogens through food. Although, this may not solve all food safety issues. Proper food handling can help cover a large percentage of food related illnesses that people may experience. Follow these steps as well as anything additional company policies to ensure that your customers are consuming safe food. For more information refer to your company guidlines and policies around Safe Food Handling or the World Health Organization for their guide for food safety. </p> <p>Knowledge = Prevention.</p>
+    </div> 
 
-      <p class="graphText">
-        Cras semper auctor neque vitae tempus quam pellentesque nec nam. Tempus
-        imperdiet nulla malesuada pellentesque elit eget gravida. Consequat
-        interdum varius sit amet mattis vulputate enim nulla. Dui sapien eget mi
-        proin sed. Enim blandit volutpat maecenas volutpat blandit aliquam
-        etiam. Neque volutpat ac tincidunt vitae. Faucibus ornare suspendisse
-        sed nisi. Lorem ipsum dolor sit amet consectetur adipiscing elit ut.
-        Suscipit adipiscing bibendum est ultricies integer quis auctor. Orci
-        porta non pulvinar neque laoreet. Dignissim suspendisse in est ante in
-        nibh mauris. Nascetur ridiculus mus mauris vitae. Morbi blandit cursus
-        risus at ultrices mi tempus.
-      </p>
-    </div>
+</section>
+  </div>
 
-    <div class="graphArea2">
-      <img class="graph2" src="16735.jpeg" alt="Statistics Graph" />
-      <p class="graphText2">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Est placerat in
-        egestas erat imperdiet sed euismod nisi porta. Pretium viverra
-        suspendisse potenti nullam ac tortor vitae. Id porta nibh venenatis cras
-        sed felis. Enim tortor at auctor urna nunc id cursus metus. Enim blandit
-        volutpat maecenas volutpat blandit aliquam. Amet justo donec enim diam.
-        Lacus sed viverra tellus in. At volutpat diam ut venenatis tellus in
-        metus vulputate. Fermentum iaculis eu non diam phasellus vestibulum
-        lorem sed risus. Nec dui nunc mattis enim ut tellus elementum sagittis
-        vitae. Tellus rutrum tellus pellentesque eu tincidunt. Venenatis a
-        condimentum vitae sapien. Netus et malesuada fames ac. Rutrum quisque
-        non tellus orci ac auctor augue mauris augue. Integer vitae justo eget
-        magna fermentum iaculis eu. Euismod in pellentesque massa placerat duis
-        ultricies. Tellus mauris a diam maecenas sed enim ut.
-      </p>
-      <p class="graphText2">
-        Ultricies lacus sed turpis tincidunt id aliquet risus feugiat. Nisi est
-        sit amet facilisis magna. Fames ac turpis egestas maecenas pharetra
-        convallis posuere morbi. Condimentum mattis pellentesque id nibh. Nibh
-        nisl condimentum id venenatis a condimentum vitae. Scelerisque viverra
-        mauris in aliquam. Condimentum vitae sapien pellentesque habitant morbi
-        tristique senectus. Lorem sed risus ultricies tristique nulla aliquet.
-        Hendrerit gravida rutrum quisque non. Mauris ultrices eros in cursus
-        turpis. Hendrerit gravida rutrum quisque non tellus orci. Enim neque
-        volutpat ac tincidunt vitae semper. Mauris ultrices eros in cursus
-        turpis massa. Dignissim enim sit amet venenatis urna cursus eget nunc
-        scelerisque. Nunc sed blandit libero volutpat. Adipiscing vitae proin
-        sagittis nisl. In nulla posuere sollicitudin aliquam ultrices sagittis
-        orci a.
-      </p>
-    </div>
+</body>
     <!--FOOTER-->
     <div class="footer">
       <div class="social-media">
@@ -135,7 +139,7 @@
         ></a>
       </div>
       <div class="copyright">
-        <p class="copyright">COPYRIGHT 2021 KIMBROWCONSULTING</p>
+        <p class="copyright">COPYRIGHT 2021 KIMBROW CONSULTING</p>
       </div>
     </div>
 
