small grammar adjustments

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 </ul>
 </p>
 </section> <section class="conculsion">
-    <p>Proper food handling can help mitigate the risk of the transfer of dangerous microorganisms or pathogens through food. Although, this may not solve all food safety issues. Proper food handling can help cover a large percentage of food related illnesses that people may experience. Follow these steps as well as anything additional company policies to ensure that your customers are consuming safe food. For more information refer to your company guidlines and policies around Safe Food Handling or the World Health Organization for their guide for food safety. </p> <p>Knowledge = Prevention.</p>
+    <p>Proper food handling can help mitigate the risk of the transfer of dangerous microorganisms or pathogens through food. Although, this may not solve all food safety issues proper food handling can help cover a large percentage of food related illnesses that people may experience. Follow these steps as well as anything additional company policies to ensure that your customers are consuming safe food. For more information refer to your company guidlines and policies around Safe Food Handling or the World Health Organization for their guide for food safety. </p> <p><strong id="stepWords">KNOWLEDGE = PREVENTION</strong></p>
     </div> 
 
 </section>
