--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="contianer">
     <div class="graphArea">
       <h2 class="introText">
-         Unsafe food has been a problem in society since history was first recorded. Food-borne diseases are not only problems in developing countries but also in developed countries such as our own. Although every day people around the world get sick from food they eat; most food-borne diseases can be prevented with proper food handling. In this article we will cover the five keys when handling food. Following these steps helps prevent microorganisms from making your customers or yourself sick. 
+         Unsafe food has been a problem in society since history was first recorded. Food-borne diseases are not only problems in developing countries but also in developed countries such as our own. Although every day people around the world get sick from food they eat; most food-borne diseases can be prevented with proper food handling. In this article we will cover the five crucial steps when handling food. Following these steps helps mitigate the risk of microorganisms from making your customers or yourself sick. 
          </h2>
       <img class="graph" src="/0820383cf6153008a6c20dfbd6e0e5b6.png" alt="Statistics Graph"/>  
       <section id="stepsBlock">
